<resources>
    <string name="app_name">Pengenalan Pakaian Adat Nusantara</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="materi_pakaian">Materi Pakaian adat Nusantara 34 Provinsi</string>
    <string name="game_tebak">Game Tebak Pakaian Adat</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="keluar">Keluar</string>
    <string name="menu_about">Tentang Aplikasi</string>
    <string name="about_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non nunc non tortor sodales fringilla. Etiam et efficitur ipsum.
        \n\n
        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
        \n\n
        Proin non commodo eros. Mauris vel hendrerit augue. Pellentesque id imperdiet metus. Cras aliquet neque eu consequat aliquet. Maecenas a justo ut lacus aliquam pretium sed at velit.
        \n\n
     </string>
    <string name="skor">SKOR</string>
    <string name="skor_nilai_strip">-</string>
    <string name="selesai">Selesai</string>
    <string name="strip">-</string>
    <string name="pertanyaan_game">Pakaian adat dari daerah mana gambar di atas?</string>
    <string name="pilih_kategori_materi">Pilih Kategori Materi</string>
    <string name="pakaian_adat_sehari_hari">Pakaian Adat Sehari hari</string>
    <string name="pakaian_adat_pengantin">Pakaian Adat Pengantin</string>
    <string name="back_button">back button</string>
</resources>
